--- a/README
+++ b/README
@@ -26,4 +26,13 @@ Scan a udpxy server from 1.2.3.0 to 1.2.3.255 using only 1 thread and parse the 
 udpxyscan -u http://1.2.3. -m %d:1234 -s
 
 
+BUILD INFORMATION
+
+This code relies on the bitstream package and pthread support
+
+bitstream can be found at http://www.videolan.org/developers/bitstream.html
+
+To build just type make
+
+
 
